# sora2-frame-pallets

multisig/: Cargo.toml
multisig/src/: lib.rs  tests.rs
